--- a/package.json
+++ b/package.json
@@ -9,16 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.5",
+    "fecha": "^4.2.3",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
+    "sass": "^1.49.11",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
-    "@types/node": "^18.0.0",
-    "@types/react": "^18.0.14",
-    "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
-        "sass": "^1.49.11"
-
+    "@types/node": "17.0.21",
+    "@types/react": "17.0.39",
+    "@types/react-animate-on-scroll": "^2.1.5",
+    "@types/react-slick": "^0.23.8",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "autoprefixer": "^10.4.2",
+    "eslint": "8.10.0",
+    "eslint-config-next": "12.1.0",
+    "eslint-config-prettier": "^8.5.0",
+    "postcss": "^8.4.7",
+    "prettier": "^2.5.1",
+    "tailwindcss": "^3.0.23",
+    "typescript": "4.6.2"
   }
 }
