--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal-video": "^1.2.9",
     "react-slick": "^0.29.0",
     "sass": "^1.49.11",
     "slick-carousel": "^1.8.1"
